--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "devDependencies": {
     "@twa-dev/types": "^7.0.0",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "telegram-ui": "link:@types/@telegram-apps/telegram-ui",
     "typescript": "^5"
   }
 }
